Prototipação da tela de cadastro de usuário

--- a/src/main/resources/templates/usuario/usuario.html
+++ b/src/main/resources/templates/usuario/usuario.html
@@ -108,7 +108,8 @@
 						</div>
 					</div>
 					<div class="modal-footer">
-						<button type="submit" class="btn btn-primary">Salvar</button>
+						<button class="btn btn-primary">Salvar</button>
+						<button type="submit" class="btn btn-default">Fechar</button>
 					</div>
 				</form>
 			</div>
