--- a/src/main/resources/templates/usuario/pesquisaUsuario.html
+++ b/src/main/resources/templates/usuario/pesquisaUsuario.html
@@ -13,7 +13,7 @@
 	<div class="container">
 		<ol class="breadcrumb">
 			<li><a href="">Dashboard</a></li>
-			<li><a href="">Cadastro de Usuário</a></li>
+			<li><a href="">Usuário</a></li>
 		</ol>
 
 		<div class="row cabecalho">
