--- a/src/main/resources/templates/usuario/cadastroUsuario.html
+++ b/src/main/resources/templates/usuario/cadastroUsuario.html
@@ -29,7 +29,8 @@
 		
 		<div class="alert alert-danger alert-dismissible" role="alert">
   			<button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-  			<strong>Erro!</strong> Dados não Salvos.
+  			<strong>Erro!</strong>
+  			<span th:text="${mensagem}"></span> 
 		</div>	
 		
 		
