Inicio do cadastro de setor por modal

--- a/src/main/resources/templates/setor/ListarSetores.html
+++ b/src/main/resources/templates/setor/ListarSetores.html
@@ -90,7 +90,7 @@
 	</div>
 
 
-	<div class="modal fade" id="novo">
+	<div class="modal fade" id="modal-setor-cadastro">
 		<div class="modal-dialog">
 			<div class="modal-content">
 				<div class="modal-header">
@@ -114,5 +114,12 @@
 	</div>
 
 </section>	
+
+<th:block layout:fragment="javaScript-extra">
+	<scrip>
+		
+	</scrip>
+	
+</th:block>
 </body>
 </html>
