Conclusão do cadastro do stor via modal

--- a/src/main/resources/templates/setor/ListarSetores.html
+++ b/src/main/resources/templates/setor/ListarSetores.html
@@ -94,8 +94,9 @@
 </section>	
 
 <th:block layout:fragment="javaScript-extra">
-	<script th:scr="@{/js/setor.js}"></script>
+	<script th:src="@{/js/setor.js}"></script>
 </th:block>
+
 
 </body>
 </html>
