--- a/src/main/resources/templates/usuario/ListarUsuarios.html
+++ b/src/main/resources/templates/usuario/ListarUsuarios.html
@@ -11,27 +11,31 @@
 <section layout:fragment="corpo">
 
 	<div class="container">
-		<ol class="breadcrumb">
-			<li><a th:href="@{/}">Dashboard</a></li>
-			<li><a href="">Usuário</a></li>
-		</ol>
-
-		<div class="row cabecalho">
-			<div class="col-xs-12 col-md-6">
-				<h1>Usuários</h1>
-			</div>
-			<div class="col-xs-12 col-md-4 col-md-offset-2 busca">
-				<div class="input-group">
-					<input type="text" name="busca" class="form-control"
-						placeholder="Pesquisar por nome do usuário"> <span
-						class="input-group-btn">
-						<button type="button" class="btn btn-default">
-							<span class="glyphicon glyphicon-search"></span>
-						</button>
-					</span>
+		<form method="GET" th:object="${usuarioFilter}">
+	
+			<ol class="breadcrumb">
+				<li><a th:href="@{/}">Dashboard</a></li>
+				<li><a href="">Usuário</a></li>
+			</ol>
+	
+			<div class="row cabecalho">
+				<div class="col-xs-12 col-md-6">
+					<h1>Usuários</h1>
+				</div>
+				<div class="col-xs-12 col-md-4 col-md-offset-2 busca">
+					<div class="input-group">
+						<input type="text" name="busca" class="form-control" placeholder="Pesquisar por nome do usuário" th:field="*{nome}"> 
+						<span class="input-group-btn">
+							<button type="submit" class="btn btn-default">
+								<span class="glyphicon glyphicon-search"></span>
+							</button>
+						</span>
+					</div>
 				</div>
 			</div>
-		</div>
+			
+		</form>
+		
 
 		<div class="table-responsive  bw-tabela-simples">
 			<table
@@ -80,12 +84,12 @@
 			<div class="col-sm-6 paginacao text-right">
 				<ul class="pagination">
 					<li class="disabled"><a href=""><span>«</span></a></li>
-					<li class="active"><a href="">1</a></li>
-					<li><a href="">2</a></li>
-					<li><a href="">3</a></li>
-					<li><a href="">4</a></li>
-					<li><a href="">5</a></li>
-					<li><a href=""><span>»</span></a></li>
+					<li><a href="?page=0">1</a></li>
+					<li><a href="?page=1">2</a></li>
+					<li><a href="?page=2">3</a></li>
+					<li><a href="?page=3">4</a></li>
+					<li><a href="?page=4">5</a></li>
+					<li class="disabled"><a href=""><span>»</span></a></li>
 				</ul>
 			</div>
 		</footer>
