Conversor para enum Ativo (corrigir)

--- a/src/main/resources/templates/setor/CadastroSetor.html
+++ b/src/main/resources/templates/setor/CadastroSetor.html
@@ -2,7 +2,7 @@
 <html lang="pt" xmlns="http://www.w3.org/1999/xhtml" 
 	xmlns:th="http://www.thymeleaf.org"
 	xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
-	layout:decorate="layout/padrao">
+	layout:decorate="~{layout/padrao}">
 	
 <head>
 	<link rel="stylesheet" th:href="@{/css/bootstrap-toggle.min.css}"/>
