--- a/src/main/resources/templates/usuario/CadastroUsuario.html
+++ b/src/main/resources/templates/usuario/CadastroUsuario.html
@@ -2,7 +2,7 @@
 <html lang="pt" xmlns="http://www.w3.org/1999/xhtml" 
 	xmlns:th="http://www.thymeleaf.org"
 	xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
-	layout:decorate="layout/padrao">
+	layout:decorate="~{layout/padrao}">
 	
 <head>
 	<title>Cadastro de Usuário</title>
@@ -47,12 +47,12 @@
 				<div class="row">
 					<div class="form-group col-sm-6">
 						<label for="nome">Nome</label>
-						<input type="text" id="nome" class="form-control" th:field="*{nome}">
+						<input type="text" id="nome" class="form-control" th:field="*{nome}" th:classappend="${#fields.hasErrors('nome')} ? has-error">
 					</div>
 						
 					<div class="form-group col-sm-6">
 						<label for="email">Email</label>
-						<input type="email" id="email" class="form-control" th:field="*{email}">
+						<input type="email" id="email" class="form-control" th:field="*{email}" th:classappend="${#fields.hasErrors('email')} ? has-error">
 					</div>
 						
 				</div>
@@ -61,7 +61,7 @@
 				<div class="row">
 					<div class="form-group col-sm-3">
 						<label for="tipo">Credencial:</label>
-						<select id="tipo" class="form-control" th:field="*{administrador}">
+						<select id="tipo" class="form-control" th:field="*{administrador}" th:classappend="${#fields.hasErrors('administrador')} ? has-error">
 							<option value="">Selecione...</option>
 							<option th:each="credencial : ${credenciais}" th:value="${credencial}" th:text="${credencial.descricaoUsuario}"></option>
 						</select>
@@ -69,12 +69,12 @@
 		            
 					<div class="form-group col-sm-3">
 						<label for="login">Login:</label>
-						<input type="text" id="login" class="form-control" th:field="*{login}">
+						<input type="text" id="login" class="form-control" th:field="*{login}" th:classappend="${#fields.hasErrors('login')} ? has-error">
 					</div>
 
 					<div class="form-group col-sm-3">
 						<label for="senha">Senha:</label>
-						<input type="password" id="senha" class="form-control" th:field="*{senha}">
+						<input type="password" id="senha" class="form-control" th:field="*{senha}" th:classappend="${#fields.hasErrors('senha')} ? has-error">
 					</div>
 
 					<div class="form-group col-sm-3">
@@ -86,36 +86,58 @@
 
 				
 				
-				<div class="row">
-					<div class="col-sm-6  form-group">
-						<label>Status</label>
-						<div>
-							<th:block th:each="status : ${tipoAtivo}">
-								<div class="radio  radio-inline">
-									<input th:id="|id_${status}|" type="radio" th:value="${status}" th:field="*{ativo}"> 
-									<label th:for="|id_${status}|" th:text="${status.descricao}">Nacional</label>
-								</div>
-							</th:block>
-						</div>
-					</div>
-				</div>
+<!-- 				<div class="row"> -->
+<!-- 					<div class="col-sm-6  form-group"> -->
+<!-- 						<label>Status</label> -->
+<!-- 						<div> -->
+<!-- 							<th:block th:each="status : ${tipoAtivo}"> -->
+<!-- 								<div class="radio  radio-inline"> -->
+<!-- 									<input th:id="|id_${status}|" type="radio" th:value="${status}">  -->
+<!-- 									<label th:for="|id_${status}|" th:text="${status.descricao}">Nacional</label> -->
+<!-- 								</div> -->
+<!-- 							</th:block> -->
+<!-- 						</div> -->
+<!-- 					</div> -->
+<!-- 				</div> -->
 				
 				
-				<div class="row">
-					<div class="form-group col-sm-6">
-						<label for="ativo" class="control-label">Ativo:</label>
-						<input type="checkbox" id="ativo" data-on-text="SIM" data-on-color="success" 
-							data-off-text="NÃO" data-off-color="danger" 
-							on-label="ATIVO" off-label="INATIVO"
-							checked class="form-control js-ativo" name="ativo">
-		            </div>				
-				</div>
+<!-- 				<div class="row"> -->
+<!-- 					<div class="form-group col-sm-6"> -->
+<!-- 						<label for="ativo" class="control-label">Ativo:</label> -->
+<!-- 						<input type="checkbox" id="ativo"  -->
+<!-- 							data-on-text="SIM"  -->
+<!-- 							data-on-color="success"  -->
+<!-- 							data-off-text="NÃO"  -->
+<!-- 							data-off-color="danger"  -->
+<!-- 							on-label="ATIVO"  -->
+<!-- 							off-label="INATIVO" -->
+<!-- 							th:checked="${ativo=='ATIVO'}"   -->
+<!-- 							class="form-control js-ativo"  -->
+<!-- 							name="ativo" -->
+<!-- 							th:field="*{ativo}"> -->
+<!-- 		            </div>				 -->
+<!-- 				</div> -->
 
-				<div class="row">
-					<div class="form-group  col-sm-3">
-						<input type="checkbox" class="js-toggle" checked data-toggle="toggle" data-on="ATIVO" data-off="INATIVO" data-onstyle="success" data-offstyle="danger"/>
-					</div>
-				</div>
+
+				<input type="checkbox" class="js-ativo" 
+					data-size="small" 
+					data-off-color="danger" 
+					data-on-text="Ativo" 
+					data-off-text="Inativo" 
+					th:field="*{ativo.valor}"/>
+
+
+<!-- 				<div class="row"> -->
+<!-- 					<div class="form-group  col-sm-3"> -->
+<!-- 						<input type="checkbox"  -->
+<!-- 							class="js-toggle" checked  -->
+<!-- 							data-toggle="toggle"  -->
+<!-- 							data-on="ATIVO"  -->
+<!-- 							data-off="INATIVO"  -->
+<!-- 							data-onstyle="success"  -->
+<!-- 							data-offstyle="danger"/> -->
+<!-- 					</div> -->
+<!-- 				</div> -->
 				
 			</div>
 
@@ -142,6 +164,10 @@
 	<script th:src="@{/js/bootstrap-toggle.min.js}"></script>
 	<script>
 	    $('.js-toggle').bootstrapToggle();
+	</script>
+	
+	<script>
+		
 	</script>
 	
 </th:block>
