Correção na paginação - Botão para página anterior qdo for a primeira página e botão para página seguinte qdo for a última página

--- a/src/main/resources/templates/setor/ListarSetores.html
+++ b/src/main/resources/templates/setor/ListarSetores.html
@@ -71,7 +71,7 @@
 					</tr>
  					 
  					<tr th:if="${pagina.vazia}">
-						<td colspan="4">Nenhum usuário encontrado</td>
+						<td colspan="4">Nenhum registro encontrado</td>
 					</tr>
 					
 					
