--- a/src/main/resources/templates/layout/fragments/Paginacao.html
+++ b/src/main/resources/templates/layout/fragments/Paginacao.html
@@ -8,7 +8,7 @@
 			<ul class="pagination">
 			
 				<li th:class="${pagina.primeira} ? disabled">
-					<a th:href="${pagina.urlPagina(pagina.atual - 1)}"><span>«</span></a>
+					<a th:href="${pagina.urlPagina(pagina.atual - (pagina.primeira ? 0 : 1))}"><span>«</span></a>
 				</li>
 				
 				<th:block th:each="p : ${#numbers.sequence(1, pagina.total)}" th:with="numeroPagina=${p - 1}">
@@ -19,7 +19,7 @@
 
 
 				<li th:class="${pagina.ultima} ? disabled">
-					<a th:href="${pagina.urlPagina(pagina.atual + 1)}"><span>»</span></a>
+					<a th:href="${pagina.urlPagina(pagina.atual + (pagina.primeira ? 0 : 1))}"><span>»</span></a>
 				</li>
 			</ul>
 		</div>
